--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGODB_CNN=mongodb+srv://cristian97herrera:Cristian97@miclustercafe.5d76snc.mongodb.net/controlGastos
+SECRETOPRIVATEKEY= crisT1an
